# PI-energia

./: .gitignore  Makefile  README.md  pyproject.toml
data/: pde_custos.yml  ref_mva_por_tensao.yml
datasets/: README.md
datasets/SIGET - Contrato Módulo Equipamento Subestacao/: README.md  siget-contrato-moduloequipamento-subestacao.csv
datasets/SIGET - Contrato Módulo Geral Subestação Tipo Arranjo/: README.md  siget-contrato-modulogeral-subestacao-tipoarranjo.csv
datasets/SIGET - Contrato Módulo Linha Transmissão/: README.md  siget-contrato-modulolinhatransmissao-subestacaoorigem-subestacaodestino.csv
datasets/balanco_energetico_nacional/: Matriz ab2024.xlsx  README.md
datasets/carga_energia/: CARGA_ENERGIA_2025.parquet  README.md
datasets/consolidacao_resultados/: README.md
datasets/demanda_eletricidade/: README.md
datasets/fator_capacidade_eolica_solar/: FATOR_CAPACIDADE-2_2025_01.parquet  FATOR_CAPACIDADE-2_2025_02.parquet  FATOR_CAPACIDADE-2_2025_03.parquet  FATOR_CAPACIDADE-2_2025_04.parquet  FATOR_CAPACIDADE-2_2025_05.parquet  FATOR_CAPACIDADE-2_2025_06.parquet  FATOR_CAPACIDADE-2_2025_07.parquet  FATOR_CAPACIDADE-2_2025_08.parquet  FATOR_CAPACIDADE-2_2025_09.parquet  FATOR_CAPACIDADE-2_2025_10.parquet  FATOR_CAPACIDADE-2_2025_11.parquet  FATOR_CAPACIDADE-2_2025_12.parquet  README.md
datasets/parametros_custo_geracao/: README.md
datasets/siga/: README.md
docs/: mvp.md  plano_visualizacao.html
scripts/: inspect_ben.py  inspect_carga.py  inspect_fator_capacidade.py  inspect_siga.py  inspect_siget_linhas.py
src/pi_energia/: config.py
(+23 files in other folders)
